turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:24: error: '=' expected but identifier found.
   	def couleurActuelle():=Int{
                             ^Turmite:31: error: illegal start of simple expression
	def changeState(){
^